# peanut

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: commands.py  config.py  email_responder.py  gmail.py  gmail_auth.py  llm_providers.py  main.py  memory.py  metrics.py  models.py  planner.py  prompts.py  run.py  scorer.py  task_responder.py  telegram.py  trello.py
k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml
scripts/: run_report.sh
tests/: test_commands.py  test_email_responder.py  test_memory.py  test_planner.py  test_scorer.py  test_task_responder.py  test_telegram.py  test_trello.py
