[project]
name = "peanut"
version = "0.1.0"
description = "Peanut — a secure AI personal assistant for daily tasks, email context, and priorities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "google-genai>=1.14.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
